fix: format-video spacing

--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -208,6 +208,11 @@
       }
     }
   }
+  &.format-video{
+    .post-meta {
+      margin-top: 12px;
+    }
+  }
 
   .post-title {
     font-size: 32px;
